<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MovieDetailsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:padding="@dimen/size_2x">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/back_label_top_margin" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrowBack"
            android:layout_width="14dp"
            android:layout_height="18dp"
            android:padding="@dimen/half_x_size"
            android:src="@drawable/ic_arrow_back"
            android:translationX="-4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:fontFamily="@font/roboto_light"
            android:paddingHorizontal="@dimen/half_x_size"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/arrowBack"
            app:layout_constraintStart_toEndOf="@+id/arrowBack"
            app:layout_constraintTop_toTopOf="@+id/arrowBack" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ageCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline2"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="13+" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_black"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline2"
            tools:text="Avengers:\nEnd Game" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_x_size"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/taglineText"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieName"
            tools:text="Action, Adventure, Fantasy" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/movieRating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:rating="3.5"
            android:theme="@style/MovieRatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/reviewsCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_x"
            android:layout_marginTop="@dimen/size_x"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/rating_background"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/movieRating"
            app:layout_constraintTop_toBottomOf="@+id/tagline"
            tools:text="125 Reviews" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/storylineTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_3x"
            android:fontFamily="@font/roboto_black"
            android:text="@string/storyline"
            android:textColor="#FFECECEC"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewsCounter" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/storylineContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_2x"
            android:alpha=".75"
            android:fontFamily="@font/roboto_light"
            android:lineSpacingMultiplier="1.4"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storylineTitle"
            tools:text="@string/tmp_text_4" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/castTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_3x"
            android:fontFamily="@font/roboto_black"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storylineContent" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/moviePicture1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_x"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/moviePicture2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/castTitle"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize4dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/moviePicture2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/size_x"
            android:scaleType="fitXY"
            android:src="@drawable/movie_2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/moviePicture3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/moviePicture1"
            app:layout_constraintTop_toTopOf="@+id/moviePicture1"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize4dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/moviePicture3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/size_x"
            android:scaleType="fitXY"
            android:src="@drawable/movie_3"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/moviePicture4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/moviePicture2"
            app:layout_constraintTop_toTopOf="@+id/moviePicture1"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize4dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/moviePicture4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/size_x"
            android:scaleType="fitXY"
            android:src="@drawable/movie_4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/moviePicture3"
            app:layout_constraintTop_toTopOf="@+id/moviePicture1"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize4dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieCast1"
            style="@style/actor_cast"
            app:layout_constraintEnd_toEndOf="@+id/moviePicture1"
            app:layout_constraintStart_toStartOf="@+id/moviePicture1"
            app:layout_constraintTop_toBottomOf="@+id/moviePicture1"
            tools:text="@string/tmp_name_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieCast2"
            style="@style/actor_cast"
            app:layout_constraintEnd_toEndOf="@+id/moviePicture2"
            app:layout_constraintStart_toStartOf="@+id/moviePicture2"
            app:layout_constraintTop_toBottomOf="@+id/moviePicture2"
            tools:text="@string/tmp_name_2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieCast3"
            style="@style/actor_cast"
            app:layout_constraintEnd_toEndOf="@+id/moviePicture3"
            app:layout_constraintStart_toStartOf="@+id/moviePicture3"
            app:layout_constraintTop_toBottomOf="@+id/moviePicture3"
            tools:text="@string/tmp_name_3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieCast4"
            style="@style/actor_cast"
            app:layout_constraintEnd_toEndOf="@+id/moviePicture4"
            app:layout_constraintStart_toStartOf="@+id/moviePicture4"
            app:layout_constraintTop_toBottomOf="@+id/moviePicture4"
            tools:text="@string/tmp_name_4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
