<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_holder"
    android:layout_width="match_parent"
    android:background="@color/movies_detail_background"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detail_backdrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/detail_guideline" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detail_shadow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/detail_mask"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/detail_guideline" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrow_back"
            android:layout_width="14dp"
            android:layout_height="18dp"
            android:layout_marginStart="@dimen/size_2x"
            android:layout_marginTop="@dimen/size_2x"
            android:padding="@dimen/half_x_size"
            android:src="@drawable/ic_arrow_back"
            android:translationX="-4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/back_marker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:fontFamily="@font/roboto_light"
            android:paddingHorizontal="@dimen/half_x_size"
            android:paddingVertical="@dimen/half_x_size"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/arrow_back"
            app:layout_constraintStart_toEndOf="@+id/arrow_back"
            app:layout_constraintTop_toTopOf="@+id/arrow_back" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/detail_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/age_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_2x"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/detail_guideline"
            android:layout_marginBottom="68dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="1+" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_2x"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_black"
            android:maxLines="4"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/size_2x"
            app:layout_constraintTop_toBottomOf="@+id/age_category"
            tools:text="Avengers:\nEnd Game" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_2x"
            android:layout_marginTop="@dimen/half_x_size"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/taglineText"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_name"
            tools:text="Action, Adventure, Fantasy" />

        <com.example.academyfundamentalsproject.utils.CustomFiveStarsRating
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_2x"
            app:emptyStarImage="@drawable/ic_star_icon_empty"
            app:fullFilledStarImage="@drawable/ic_star_icon_filled"
            app:halfFilledStarImage="@drawable/ic_star_icon_1_2"
            app:layout_constraintBottom_toBottomOf="@+id/reviews_counter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/reviews_counter"
            app:numberOfStars="5"
            app:quarterFilledStarImage="@drawable/ic_star_icon_1_4"
            app:starSize="12dp"
            app:startRating="15"
            app:threeQuarterFilledStarImage="@drawable/ic_star_icon_3_4" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/reviews_counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_x"
            android:layout_marginTop="@dimen/size_x"
            android:layout_marginEnd="@dimen/size_2x"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/rating_background"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_rating"
            app:layout_constraintTop_toBottomOf="@+id/tagline"
            tools:text="125 Reviews" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/storyline_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_2x"
            android:layout_marginTop="@dimen/size_3x"
            android:fontFamily="@font/roboto_black"
            android:text="@string/storyline"
            android:textColor="#FFECECEC"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews_counter" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/storyline_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_2x"
            android:layout_marginTop="@dimen/size_2x"
            android:alpha=".75"
            android:fontFamily="@font/roboto_light"
            android:lineSpacingMultiplier="1.4"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline_title"
            tools:text="@string/tmp_text_4" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cast_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_2x"
            android:layout_marginTop="@dimen/size_3x"
            android:fontFamily="@font/roboto_black"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_2x"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast_title"
            tools:itemCount="4"
            tools:listitem="@layout/view_holder_actor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
